# actix_web_starter_v2

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: handlers.rs  main.rs  repositories.rs  services.rs
src/api/: handler_create_item.rs  mod.rs  routes.rs
src/services/item/: services.rs
src/services/item/storage/: model.rs  service.rs
