[package]
name = "rust_dep_inj_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rusoto_core = "0.48"
rusoto_dynamodb = "0.48"

tokio = { version = "1", features = ["full"] }

serde = "1.0.190"
serde_derive = "1.0"
serde_json = "1.0"
async-trait = "0.1"
