[package]
name = "rust_actix_starter_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.9.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

rusoto_core = "0.48"
rusoto_dynamodb = "0.48"

mockall = "0.11.4"

serde = "1.0.190"
serde_derive = "1.0"
serde_json = "1.0"
